# svrui

./: .gitignore  LICENSE  build_windows.bat  meson.build  meson.options  svrui_linux.10x  svrui_windows.10x  svrui_windows.rdbg  todo.md  vrui.c  vrui.h  vrui_base.h  vrui_gfx.c  vrui_gfx.h  vrui_layout.c  vrui_layout.h  vrui_pal.h  vrui_pal_linux.c  vrui_pal_win32.c  vrui_window.c  vrui_window.h  wine_cross.txt
example/: meson.build  openvr_capi.h  rawdraw_sf.h  vrui_hello_world.c  vrui_iter.c  vrui_ogl_test.c
overlay_reference/: main.c  meson.build  overlay_input.h  renderer.c  renderer.h
overlay_reference/lib/: volk.c  volk.h
overlay_reference/lib/vulkan_api/include/vulkan/: vk_layer.h  vulkan.hpp  vulkan_funcs.hpp  vulkan_raii.hpp  vulkan_to_string.hpp
