#///////////////////////////////////////////////////////////////////////////
#/
#/  SVRUI Source File.
#/  Copyright (C) 2024 Clara Lille
#/ -------------------------------------------------------------------------
#/  File name:   meson.build
#/  Version:     v1.00
#/  Created:     24/01/24 by Clara.
#/  Description: 
#/ -------------------------------------------------------------------------
#/  This project is licensed under the MIT License
#/
#///////////////////////////////////////////////////////////////////////////

example_files = files('vrui_hello_world.c')
iter_files = files('vrui_iter.c')
